--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+quarkus.datasource.jdbc.url=jdbc:postgresql://quarkus-db:5555/fruit
+quarkus.datasource.jdbc.max-size=16
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=postgres
+quarkus.datasource.password=postgres
+quarkus.hibernate-orm.log.sql=true
 
 # DEVELOPMENT PROFILE
 %dev.quarkus.datasource.db-kind=postgresql
@@ -10,7 +16,7 @@
 
 # TESTING PROFILE
 %test.quarkus.datasource.db-kind=postgresql
-%test.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:8081/fruit
+%test.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5555/fruit
 %test.quarkus.datasource.username=postgres
 %test.quarkus.datasource.password=postgres
 %test.quarkus.hibernate-orm.database.generation=drop-and-create
@@ -19,8 +25,34 @@
 
 # PRODUCTION PROFILE
 %prod.quarkus.datasource.db-kind=postgresql
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5555/fruit
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://quarkus-db:5555/fruit
 %prod.quarkus.datasource.username=postgres
 %prod.quarkus.datasource.password=postgres
-%prod.quarkus.hibernate-orm.database.generation=update
-%prod.quarkus.hibernate-orm.sql-load-script=initconf.sql
+%prod.quarkus.hibernate-orm.database.generation=none
+
+# ENABLE CORS
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:8080,http://127.0.0.1:5500
+quarkus.http.cors.exposed-headers=Access-Control-Allow-Origin
+quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.cors.methods=GET, DELETE, POST, OPTIONS
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
