--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,35 @@
-quarkus.datasource.jdbc.url=jdbc:postgresql://quarkus-db:5555/fruit
+quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:5434/fruit
 quarkus.datasource.jdbc.max-size=16
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=postgres
-quarkus.datasource.password=postgres
-quarkus.hibernate-orm.log.sql=true
+quarkus.datasource.db-kind=mariadb
+quarkus.datasource.username=developer
+quarkus.datasource.password=developer
+
+# Para loggear las consultas que suceden por debajo.
+quarkus.hibernate-orm.log.sql=false
 
 # DEVELOPMENT PROFILE
-%dev.quarkus.datasource.db-kind=postgresql
-%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5555/fruit
-%dev.quarkus.datasource.username=postgres
-%dev.quarkus.datasource.password=postgres
+%dev.quarkus.datasource.db-kind=mariadb
+%dev.quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:6666/fruit
+%dev.quarkus.datasource.username=developer
+%dev.quarkus.datasource.password=developer
 %dev.quarkus.hibernate-orm.database.generation=update
-%dev.quarkus.hibernate-orm.sql-load-script=initconf.sql
+%dev.quarkus.hibernate-orm.sql-load-script=initconf-mariadb.sql
 
 
 # TESTING PROFILE
-%test.quarkus.datasource.db-kind=postgresql
-%test.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5555/fruit
-%test.quarkus.datasource.username=postgres
-%test.quarkus.datasource.password=postgres
-%test.quarkus.hibernate-orm.database.generation=drop-and-create
+%test.quarkus.datasource.db-kind=mariadb
+%test.quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:5434/fruit
+%test.quarkus.datasource.username=developer
+%test.quarkus.datasource.password=developer
+%test.quarkus.hibernate-orm.database.generation=create
 %test.quarkus.hibernate-orm.sql-load-script=testconf.sql
 
 
 # PRODUCTION PROFILE
-%prod.quarkus.datasource.db-kind=postgresql
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://quarkus-db:5555/fruit
-%prod.quarkus.datasource.username=postgres
-%prod.quarkus.datasource.password=postgres
+%prod.quarkus.datasource.db-kind=mariadb
+%prod.quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:5434/fruit
+%prod.quarkus.datasource.username=developer
+%prod.quarkus.datasource.password=developer
 %prod.quarkus.hibernate-orm.database.generation=none
 
 # ENABLE CORS
